additional work for invoice form #1

--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -40,7 +40,7 @@
     <div *ngIf="!reservationInfo.orderSummary.free && event.invoicingConfiguration.invoiceAllowed && !event.invoicingConfiguration.onlyInvoice">
       <div class="checkbox wMarginTop">
         <label>
-          <input type="checkbox" formControlName="invoiceRequested">
+          <input type="checkbox" formControlName="invoiceRequested" (change)="handleInvoiceRequestedChange()">
           {{' '}}
           <span translate="reservation-page.i-need-an-invoice"></span>
         </label>
