--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -35,7 +35,7 @@
 
     <!-- invoicing section -->
     <div *ngIf="event.invoicingConfiguration.onlyInvoice">
-      <app-invoice-form [form]="contactAndTicketsForm"></app-invoice-form>
+      <app-invoice-form [form]="contactAndTicketsForm" [event]="event"></app-invoice-form>
     </div>
     <div *ngIf="!reservationInfo.orderSummary.free && event.invoicingConfiguration.invoiceAllowed && !event.invoicingConfiguration.onlyInvoice">
       <div class="checkbox wMarginTop">
@@ -46,7 +46,7 @@
         </label>
       </div>
 
-      <app-invoice-form *ngIf="contactAndTicketsForm.value.invoiceRequested" [form]="contactAndTicketsForm"></app-invoice-form>
+      <app-invoice-form *ngIf="contactAndTicketsForm.value.invoiceRequested" [form]="contactAndTicketsForm" [event]="event"></app-invoice-form>
     </div>
     <!-- -->
 
