#1 event summary: fix from/to time in single day event

--- a/src/app/event-summary/event-summary.component.html
+++ b/src/app/event-summary/event-summary.component.html
@@ -11,7 +11,7 @@
       </li>
       <li *ngIf="dateValidityProvider.sameDay">
         <fa-icon [icon]="['far', 'clock']"></fa-icon>
-        {{' ' + dateValidityProvider.formattedBeginTime[translate.currentLang] + ' ' + dateValidityProvider.formattedEndTime[translate.currentLang] }}
+        {{' '}}{{'event-days.single-day.hours'|translate: {'0': dateValidityProvider.formattedBeginTime[translate.currentLang], '1': dateValidityProvider.formattedEndTime[translate.currentLang]} }}
       </li>
       <!-- more than one day-->
       <li *ngIf="!dateValidityProvider.sameDay">
