--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -23,7 +23,7 @@
     </div>
   </div>
 
-  <div class="row" *ngIf="form.value.addCompanyBillingDetails">
+  <div class="row" *ngIf="invoiceBusiness">
       <div class="col-12">
           <div class="form-group">
               <label for="billingAddressCompany" class="control-label" translate="reservation-page-complete.company"></label>
@@ -66,7 +66,7 @@
   </div>
 
   <div class="row">
-      <div class="col-12">
+      <div class="col-12" [ngClass]="{'col-md-6': customerReferenceEnabled && invoiceBusiness}">
           <div class="form-group">
               <label for="vatCountry" class="control-label">{{'reservation-page-complete.country' | translate}}{{' *'}}</label>
               <select formControlName="vatCountryCode" id="vatCountry" class="form-control field-required" required>
@@ -83,6 +83,13 @@
                     </optgroup>
                   </ng-container>
               </select>
+          </div>
+      </div>
+
+      <div *ngIf="customerReferenceEnabled && invoiceBusiness" class="col-12 col-md-6">
+          <div class="form-group">
+            <label for="customerReference" class="control-label" translate="common.customer-reference"></label>
+            <input type="text" formControlName="customerReference" id="customerReference" class="form-control" maxlength="50">
           </div>
       </div>
   </div>
