--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -100,20 +100,18 @@
             <label for="vatNr">{{'invoice.vat' |translate: {'0': 'TODO'} }}</label>
             <div class="input-group">
                 <div class="input-group-prepend" *ngIf="form.value.vatCountryCode"><span class="input-group-text">{{form.value.vatCountryCode}}</span></div>
-                <input id="vatNr" type="text" name="vatNr" class="form-control"/>
+                <input id="vatNr" type="text" formControlName="vatNr" class="form-control"/>
             </div>
         </div>
     </div>
     <div class="col-md-6" *ngIf="vatNumberStrictlyRequired">
         <div class="form-group">
-            <div class="form-check checkbox checkbox-in-form-group">
-                <label>
-                    <input class="form-check-input" name="skipVatNr" id="skip-vat-nr" value="true" type="checkbox">
-                    {{'reservation-page.skipVatNr' | translate: {'0': 'TODO'} }}
-                </label>
+            <div class="form-check checkbox-in-form-group">
+                <input class="form-check-input" type="checkbox" formControlName="skipVatNr" [value]="true" id="skip-vat-nr">
+                <label class="form-check-label radio-inline" for="skip-vat-nr">{{' '}}{{'reservation-page.skipVatNr' | translate: {'0': 'TODO'} }}</label>
             </div>
         </div>
     </div>
-</div>
+  </div>
 
 </div>
