--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -2,15 +2,15 @@
   <div class="form-group row" [formArrayName]="field.name">
     <label class="col-sm-3 col-form-label" [attr.for]="ticketUUID + '-' + field.name">{{labelValue + (field.required ? ' *' : '')}}</label>
     <div class="col-sm-9" [ngSwitch]="field.type">
-      <input *ngSwitchCase="'input:text'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
-      <input *ngSwitchCase="'input:tel'" [attr.id]="ticketUUID + '-' + field.name" type="tel" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
-      <input *ngSwitchCase="'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0">
-      <textarea *ngSwitchCase="'textarea'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="placeholder" formControlName="0"></textarea>
-      <select *ngSwitchCase="'country'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0">
+      <input *ngSwitchCase="'input:text'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
+      <input *ngSwitchCase="'input:tel'" [attr.id]="ticketUUID + '-' + field.name" type="tel" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
+      <input *ngSwitchCase="'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
+      <textarea *ngSwitchCase="'textarea'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" [attr.placeholder]="placeholder" formControlName="0" appInvalidFeedback></textarea>
+      <select *ngSwitchCase="'country'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0" appInvalidFeedback>
         <option value=""></option>
         <option *ngFor="let c of countries" [ngValue]="c.isoCode">{{c.name}}</option>
       </select>
-      <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0"></select>
+      <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0" appInvalidFeedback></select>
     </div>
   </div>
 </div>
