--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -10,17 +10,21 @@
       <h2 translate="reservation-page.your-details"></h2>
     </div>
 
+    <div class="alert alert-danger" role="alert" *ngIf="globalErrors && globalErrors.length > 0">
+      <div *ngFor="let err of globalErrors"><strong [translate]="err"></strong></div>
+    </div>
+
     <div class="row">
       <div class="col-12 col-sm-6">
         <div class="form-group">
           <label for="first-name">{{'common.first-name'|translate}}{{' '}}*</label>
-          <input id="first-name" class="form-control" formControlName="firstName" type="text" autocomplete="fname" maxlength="255">
+          <input id="first-name" class="form-control" formControlName="firstName" type="text" autocomplete="fname" maxlength="255" appInvalidFeedback>
         </div>
       </div>
       <div class="col-12 col-sm-6">
         <div class="form-group">
           <label for="last-name">{{'common.last-name'|translate}}{{' '}}*</label>
-          <input id="last-name" class="form-control" formControlName="lastName" type="text" autocomplete="lname" maxlength="255">
+          <input id="last-name" class="form-control" formControlName="lastName" type="text" autocomplete="lname" maxlength="255" appInvalidFeedback>
         </div>
       </div>
     </div>
@@ -28,7 +32,7 @@
       <div class="col-12">
         <div class="form-group">
             <label for="email">{{'common.email'|translate}}{{' '}}*</label>
-            <input id="email" class="form-control" formControlName="email" type="email" autocomplete="email" maxlength="255">
+            <input id="email" class="form-control" formControlName="email" type="email" autocomplete="email" maxlength="255" appInvalidFeedback>
         </div>
       </div>
     </div>
