support custom select in additional-field #1

--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -10,7 +10,10 @@
         <option value=""></option>
         <option *ngFor="let c of countries" [ngValue]="c.isoCode">{{c.name}}</option>
       </select>
-      <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0" appInvalidFeedback></select>
+      <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="form-control" formControlName="0" appInvalidFeedback>
+          <option value=""></option>
+          <option *ngFor="let c of field.restrictedValues" [ngValue]="c">{{getSelectLabel(c)}}</option>
+      </select>
     </div>
   </div>
 </div>
