additional service: handle max amount per ticket #1

--- a/src/app/additional-service/additional-service.component.html
+++ b/src/app/additional-service/additional-service.component.html
@@ -19,7 +19,7 @@
                     <option *ngFor="let amount of additionalService.amounts" [value]="amount">{{amount}}</option>
                 </ng-container>
                 <ng-container *ngIf="additionalService.supplementPolicy === 'OPTIONAL_MAX_AMOUNT_PER_TICKET'">
-                    <option></option>
+                    <option *ngFor="let amount of validSelectionValues" [value]="amount">{{amount}}</option>
                 </ng-container>
             </select>
         </div>
