--- a/src/styles.scss
+++ b/src/styles.scss
@@ -115,3 +115,9 @@ label.radio-inline {
         max-width: 100%;
     }
 }
+
+@media (min-width: 1200px) {
+    .container {
+        width: 960px;
+    }
+}
