--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -44,9 +44,19 @@
                           <span *ngIf="!category.free">{{category.formattedFinalPrice}} {{event.currency}} <fa-icon [icon]="['fa', 'info-circle']" class="text-info" ngbTooltip="{{(event.vatIncluded ? 'show-event.incVat' : 'show-event.excVat') | translate:{'0': event.vat, '1': 'TODO'} }}"></fa-icon></span>
                         </div>
                         <div class="col-sm-2">
-                          <select formControlName="amount" class="form-control">
-                            <option *ngFor="let amount of category.amountOfTickets" [value]="amount">{{amount}}</option>
-                          </select>
+                          <ng-container *ngIf="category.saleableAndLimitNotReached">
+                            <select formControlName="amount" class="form-control">
+                              <ng-container *ngIf="category.accessRestricted">
+                                <option [value]="0">0</option>
+                                <option [value]="1">1</option>
+                              </ng-container>
+                              <ng-container *ngIf="!category.accessRestricted">
+                                <option *ngFor="let amount of category.amountOfTickets" [value]="amount">{{amount}}</option>
+                              </ng-container>
+                            </select>
+                          </ng-container>
+                          <span *ngIf="!category.saleableAndLimitNotReached && category.souldOutOrLimitReached" translate="show-event.sold-out"></span>
+                          <span *ngIf="!category.saleableAndLimitNotReached && !category.souldOutOrLimitReached" translate="show-event.not-available"></span>
                         </div>
                     </div>
                 </li>
