generate ticket selection array client side + cleanup #1

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -51,7 +51,7 @@
                                 <option [value]="1">1</option>
                               </ng-container>
                               <ng-container *ngIf="!category.accessRestricted">
-                                <option *ngFor="let amount of category.amountOfTickets" [value]="amount">{{amount}}</option>
+                                <option *ngFor="let amount of ticketCategoryAmount[category.id]" [value]="amount">{{amount}}</option>
                               </ng-container>
                             </select>
                           </ng-container>
